billing-deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: billing-service
spec:
  selector:
    app: billing
  ports:
    - protocol: TCP
      port: 8090
      targetPort: 8090
