billing-deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: billing-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /accounts
            pathType: Prefix
            backend:
              service:
                name: billing-service
                port:
                  number: 8090
